added more info to support

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="header-text-block text-center">
             <h2 class="mp-text-dark-blue mb-4" data-aos="fade-down">How it works</h2>
-            <h4 data-aos="fade-down">We’ve partnered with your favourite retailers to offer you the flexibility to pay for your favourite products at ease. 
+            <h4 data-aos="fade-down">3 interest-free installments with either debit or credit cards. 
             </h4>
         </div>
 
@@ -68,18 +68,18 @@
                 data-aos-duration="1000">
                 <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="">
                 <h3 class="step-no mb-2">01.</h3>
-                <h5 class="px-sm-4">Add your favourites to the cart and select Mintpay as the payment option at the checkout. Log into or create your Mintpay account instantly.</h5>
+                <h5 class="px-sm-4">Add your favourites to the cart and select Mintpay as the payment option at the checkout.</h5>
             </div>
             <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="200"
                 data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="">
                 <h3 class="step-no mb-2">02.</h3>
-                <h5 class="px-sm-4">Your purchase is split into 3 installments. Pay only the first installment using your debit or credit card at the point of purchase.</h5>
+                <h5 class="px-sm-4">Your purchase is split into 3 installments. Pay only the first installment at the point of purchase.</h5>
             </div>
             <div class="col-12 col-lg-4" data-aos="flip-left" data-aos-offset="300" data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="">
                 <h3 class="step-no mb-2">03.</h3>
-                <h5 class="px-sm-4">Get your order first and the balance amount will be automatically charged from your card over the next two months on the respective due dates.</h5>
+                <h5 class="px-sm-4">Get your order first and the remaining will be automatically charged from your card on the due dates.</h5>
             </div>
         </div>
     </div>
@@ -97,8 +97,7 @@
             <h2 class="mp-text-light" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000">No worries</h2>
         </div>
 
-        <h4 class="mp-text-light mb-5" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000">Payments are
-            automatically charged from your debit or credit card</h4>
+        <h4 class="mp-text-light mb-5" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000">You only pay what you see. It's that simple.</h4>
 
         <a class="mp-btn" href="https://app.mintpay.lk/signup/" data-aos="fade-up" data-aos-offset="350" data-aos-duration="1000">Sign up now</a>
     </div>
@@ -129,7 +128,7 @@
     </div>
 </section>
 <section class="testimonial-section padding-6-t-b">
-    <div class="container">
+    <div class="container d-none">
         <h4 class="mp-text-dark-blue text-center">Our customers’ feedback are what we value the most</h4>
         <div class="testimonial-slider mt-3">
             <div class="testimonial">
