--- a/src/men.html
+++ b/src/men.html
@@ -10,10 +10,7 @@
 
     <div class="bg-img-text-block container text-center">
         <h1 class="font-weight-bold mb-4">Men</h1>
-        <h4 class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae
-            minus
-            optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-            quasi incidunt quidem.</h4>
+        <h4 class="mb-5">Whether its office wear, casual wear or sports wear. Get the top deals on everything you want.</h4>
         <a href="stores.html" class="mp-btn">Store directory</a>
     </div>
 </section>
@@ -86,7 +83,7 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/clubhouse.jpg" alt="">
+                        <img src="assets/img/stores/clubhouse_men.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.clubhousevivaldi.lk/" target="_blank">
                                 <img class="b2w-logo square-logo" src="assets/img/stores/logos/clubhouse.png" alt="">
