--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -1,12 +1,14 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Partner with us"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": " Mintpay | Integrate Mintpay as a Payment Gateway"}'>
+</include>
+
+<include src="src/layouts/head.html" locals='{"pageDescription": "Add Mintpay to your online payment gateway compatible with any eCommerce platform. It is time to take your brand to a new level with buy now pay later."}'>
 </include>
 
 <section class="sub-page-header-section yellow-bg">
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
         <h1 class="font-weight-bold mp-text-dark-blue mb-4 ">Installments with Mintpay</h1>
-        <h4>Let your customers pay how they want, when they want. Drive sales, increase conversions and keep
-            the customers coming back.</h4>
+        <h4>Entice customers with convenience and control of their spending. Experience the benefits of a larger customer base, an increase in average order size as well as a strong competitive advantage.</h4>
     </div>
 </section>
 
@@ -20,7 +22,7 @@
                 </h2>
                 <h2 class="mp-text-dark-blue d-lg-none mb-4 font-weight-semibold">Give your customers the freedom they
                     deserve</h2>
-                <h4 class="pe-lg-5">Let your customers spread the cost. It is as easy as making a regular card purchase, but gives your customers more flexibility and increases their purchase power.</h4>
+                <h4 class="pe-lg-5">Enable your customers to build the life they want. Provide them with the luxury of handling their expenses to suit their needs, with flexibility and confidence.</h4>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="img-wrapper justify-content-lg-end">
@@ -68,14 +70,14 @@
         <div class="text-center">
             <h2 class="font-weight-semibold mb-4">Seamlessly integrate with your store</h2>
             <h4>Integration with Mintpay for your online store is straightforward and seamless. Our technical support
-                team will be with you every step of the way. </h4>
+                team will be with you every step of the way.</h4>
         </div>
 
         <div class="int-logo-set d-flex flex-wrap justify-content-center justify-content-md-between align-items-center">
-            <img class="mb-5 mb-md-0" src="assets/img/shopify.svg" alt="">
-            <img class="mb-5 mb-md-0" src="assets/img/woo-commerce.svg" alt="">
-            <img class="mb-5 mb-md-0" src="assets/img/magento.svg" alt="">
-            <img src="assets/img/prestashop.svg" alt="">
+            <img class="mb-5 mb-md-0" src="assets/img/shopify.svg" alt="shopify">
+            <img class="mb-5 mb-md-0" src="assets/img/woo-commerce.svg" alt="woocommerce">
+            <img class="mb-5 mb-md-0" src="assets/img/magento.svg" alt="magento 2">
+            <img src="assets/img/prestashop.svg" alt="prestashop">
         </div>
     </div>
 </section>
