--- a/src/stores.html
+++ b/src/stores.html
@@ -40,7 +40,7 @@
     <div class="category-block">
         <div class="container">
             <div id="featured-block" class="category-block__title">Featured</div>
-            <p>We’ve got you covered for every kind of occasion whether you are online shopping for dresses last minute or you simply need to do some early holiday shopping. Browse through some of the best brands around and take your pick!</p>
+            <p>Browse through some of the best brands around and take your pick!</p>
         </div>
 
         <div class="continer-fluid mt-5">
@@ -164,9 +164,7 @@
     <div class="category-block">
         <div class="container">
             <div class="category-block__title">Men</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
-                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-                quasi incidunt quidem?</p>
+            <p>Whether its office wear, casual wear or sports wear. Get the top deals on everything you want.</p>
         </div>
 
         <div class="continer-fluid mt-5">
@@ -228,9 +226,7 @@
     <div class="category-block">
         <div class="container">
             <div id="beauty-block" class="category-block__title">Beauty &amp; Fragrance</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
-                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-                quasi incidunt quidem?</p>
+            <p>From skin care, facial care to cosmetic products, here's eveything you need for that glow up.</p>
         </div>
 
         <div class="continer-fluid mt-5">
@@ -281,7 +277,7 @@
     <div class="category-block">
         <div class="container">
             <div id="jewellery-block" class="category-block__title">Jewellery &amp; Accessories</div>
-            <p>If you are looking for the perfect set of earrings for an important dinner or a range of accessories to select from for special occassion, we bring you the most exquisite selections. Whether you need a bracelet design or a ring design coordinated, here are some stylish and intricate designs to meet your desire.</p>
+            <p>Whether you need the perfect set of earrings, a bracelet design or a ring design coordinated, here are some stylish and intricate designs to meet your desire.</p>
         </div>
 
         <div class="continer-fluid mt-5">
