--- a/src/support.html
+++ b/src/support.html
@@ -20,25 +20,21 @@
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            How does mintpay work?
+                            How does Mintpay work?
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#q-block-one">
                         <div class="accordion-body">
-                            <p>Mintpay facilitates retailers to offer installment options for online shoppers, allowing
-                                a purchase to be paid for in 3 installments over a period of 2 months.</p>
+                            <p>Mintpay is a financial technology (Fintech) company based in Sri Lanka. Mintpay facilitates retailers to offer installment options for online shoppers, allowing a purchase to be paid for in 3 installments over a period of 2 months.</p>
 
-                            <p>Simply select what you like to buy from our shop directory and select mintpay as the
-                                payment option at checkout. If you are a first time customer, you will have to enter
-                                your payment details as usual, returning shoppers simply log in to make the purchase.
-                                Simple isn't it?
-                            </p>
-
+                            <p>Simply select what you like to buy from our shop directory and select Mintpay as the
+                                payment option at checkout. If you are a first time customer, you will have to create an account and enter your payment details as usual, returning shoppers simply log in to make the purchase.
+                                Simple isn't it?</p>
 
                             <p>After you check out, the goods will be shipped to you by the retailer. If you want to
-                                see your payment schedule you can do so by logging in to your mintpay account. We will
-                                automatically take the money from your debit or credit card on the respective
+                                see your payment schedule you can do so by logging in to your Mintpay account. We will
+                                automatically deduct the money from the attached debit or credit card on the respective
                                 installment due dates.</p>
 
                         </div>
@@ -48,14 +44,23 @@
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            How can I use mintpay?
+                            How can I use Mintpay?
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#q-block-one">
                         <div class="accordion-body">
-                            <p>In order to use mintpay, you first need to create an account. Click here to be navigated
-                                to the signup page.</p>
+                            <p>Comprehensive walkthrough on how to use Mintpay</p>
+                            <ul>
+                                <li>Visit the web store of any of our partner merchants listed in our store tab</li>
+                                <li>Add the items to your shopping cart and checkout as per usual.</li>
+                                <li>Add the contact and shipping details and move to payment options</li>
+                                <li>Select Mintpay as the payment option. There are no mark-ups or processing fees. You only pay what you see.</li>
+                                <li>You’ll be redirected to a secure payment gateway to complete your order.</li>
+                                <li>First-time users will be required to create a Mintpay account. The account creation will only take you less than two minute.</li>
+                                <li>Enter your card details for the first and subsequent installments. We'll automatically deduct from your card with no interest or fees.</li>
+                                <li>Once you complete the purchase. We'll send you reminder emails 7 days and 1 day before your payment due date.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -63,14 +68,14 @@
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Why mintpay is better than credit card?
+                            Why Mintpay is better than credit card?
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#q-block-one">
                         <div class="accordion-body">
-                            <p>At mintpay we love helping our customers plan, buy and pay goods that you need without
-                                losing control of your money. So we aim to help you better manage your cashflow.</p>
+                            <p>At Mintpay we love helping our customers plan, buy and pay goods that you need without
+                                losing control of your money. You have the flexibility to use any card (debit or credit) from any bank and there is no interest, no hiiden fee or no processing fee. You pay what you see.</p>
                         </div>
                     </div>
                 </div>
@@ -88,11 +93,10 @@
                             <ul>
                                 <li>Are Sri Lankan nationality</li>
                                 <li>Are at least 18 years old</li>
-                                <li>Have a valid Sri Lankan NIC or passport</li>
+                                <li>Have a valid Sri Lankan NIC, Driver's License or passport</li>
                                 <li>Have a valid and verifiable email address and mobile number</li>
                                 <li>Provide a valid delivery address within Sri Lanka</li>
-                                <li>Be authorised to use a Sri Lankan issued credit or debit card to make the purchase
-                                </li>
+                                <li>Be authorised to use a Sri Lankan issued debit or credit card to make the purchase</li>
                             </ul>
                         </div>
                     </div>
@@ -115,27 +119,61 @@
                         data-bs-parent="#q-block-two">
                         <div class="accordion-body">
                             <p>Mintpay service is absolutely free as long as you pay your dues on time. The only fees
-                                are for late payments. We will send you email when your payments are due so there aren't
+                                are for late payments. We will send you email when your payments are due so there aren't any
                                 surprises.</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingSix">
+                    <h2 class="accordion-header" id="headingTwelve">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                            data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
                             How can I repay the installment?
                         </button>
                     </h2>
-                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+                    <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve"
                         data-bs-parent="#q-block-two">
                         <div class="accordion-body">
-                            <p>When you place an order through mintpay, you will be required to add a payment method.
-                                Your installment amount will be deducted from your respective payment method on due
+                            <p>When you place an order through Mintpay, you will be required to add a debit or credit card.
+                                Your installment amount will be deducted from your respective debit or credit card on due
                                 date.</p>
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThirteen">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
+                            Is there a limit to how much I can spend?
+                        </button>
+                    </h2>
+                    <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen"
+                        data-bs-parent="#q-block-two">
+                        <div class="accordion-body">
+                            <p>As part of Mintpay's effort to advocate responsible spending, there may ba a limit on the amount you can spend.</p>
+
+                            <p>What we can recommend is you can try to purchase a lower ticket price item with Mintpay first. As good repayment behaviuor is always rewarded with increase limit, the more you use Mintpay, the more likely you will be able to spend more.</p>
+
+                            <p>In the event of you purchasing someing more than your limit, you can pay the difference upfront and spread the rest across 2 months period.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFourteen">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
+                            What types of card can I use?
+                        </button>
+                    </h2>
+                    <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen"
+                        data-bs-parent="#q-block-two">
+                        <div class="accordion-body">
+                            <p>You can use any debit or credit card(VISA or MasterCard) issued by a bank.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingSeven">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -150,8 +188,8 @@
                                 reminders closer to your payment due dates.</p>
 
                             <p>However, if you do miss to pay, we will immediately stop you from making any further
-                                purchase through mintpay and you will incur a late fee of Rs 500/- per missed payment.
-                                At mintpay, we promote responsible spending. Hence we will do our best to remind you of
+                                purchase through Mintpay and you will incur a late fee of Rs 500/- per missed payment.
+                                At Mintpay, we promote responsible spending. Hence we will do our best to remind you of
                                 the payments due.</p>
                         </div>
                     </div>
@@ -173,10 +211,7 @@
                     <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight"
                         data-bs-parent="#q-block-three">
                         <div class="accordion-body">
-                            <p>You will pay your first payment of 33% of your purchase at the time of purchase.The
-                                second installment is due 30 days from the day of purchase. The third installment will
-                                be due 30 days after your second installment. You can log in to your mintpay account to
-                                check the exact due dates.</p>
+                            <p>You will pay your first installment at the point of purchase.The second installment is due on the following month same date. The third installment will be due in 2 months on the same date. You can log in to your Mintpay account to check the exact due dates.</p>
                         </div>
                     </div>
                 </div>
@@ -190,13 +225,13 @@
                     <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine"
                         data-bs-parent="#q-block-three">
                         <div class="accordion-body">
-                            <p>At mintpay we are committed to high standards we set ourselves to encourage responsible
+                            <p>At Mintpay we are committed to high standards we set ourselves to encourage responsible
                                 spending. And that is why we will be sending you reminders when a payment is almost due
                                 so you won't incur any late fee.</p>
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <!-- <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTen">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
@@ -210,7 +245,7 @@
                                 split equally over the next two months</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -233,6 +268,24 @@
                                 This means that you need to get in touch with the retailer if a delivery is taking
                                 longer or something is missing or damaged. This also means that once an order is
                                 approved, only the retailer can change the order.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFifteen">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+                            How does refund works?
+                        </button>
+                    </h2>
+                    <div id="collapseFifteen" class="accordion-collapse collapse" aria-labelledby="headingFifteen"
+                        data-bs-parent="#q-block-four">
+                        <div class="accordion-body">
+                            <p>You will need to reach out to the merchant to request an order cancellation/refund.</p>
+                            <p>Once the merchant has initiated the refund, we will process the refund amount back to your card (credit) or bank account (debit) which you had initially used.</p>
+                            <p>Typically, the whole process will take up to 10 business days for the amount to be reflected in your card (credit) or bank account (debit).</p>
+                            <p>An email confirmation will be sent to you</p>
                         </div>
                     </div>
                 </div>
